refactor: 하드코딩된 rankList 변경