@@ -2,6 +2,7 @@ package lotto.view;
 
 import lotto.domain.*;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
@@ -70,7 +71,8 @@ public class LottoView {
         System.out.println();
         System.out.println("당첨 통계");
         System.out.println("---------");
-        List<LottoRank> rankList = List.of(LottoRank.FIFTH, LottoRank.FOURTH, LottoRank.THIRD, LottoRank.SECOND, LottoRank.FIRST);
+        List<LottoRank> rankList = new ArrayList<>(Arrays.asList(LottoRank.values()));
+        rankList.remove(LottoRank.FAIL);
         for (LottoRank rank : rankList) {
             System.out.printf("%d개 일치 (%d원)- %d개\n", rank.COUNT, rank.PRIZE, stat.getByRank(rank));
         }
